<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.aristoteles.Quiz">

    <RelativeLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textView10"
            android:layout_toStartOf="@+id/textView10"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:text="0"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:text="@string/TotalPontos"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:text="@string/PontosQuiz"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/descricaoQuizImagem"
        android:scaleType="fitCenter"
        android:src="@drawable/questionquiz" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="@string/proposicao"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/falseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/Falso"

            android:textColor="#fff"
            android:theme="@style/ButtonPerguntas" />

        <Button
            android:id="@+id/trueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/Verdade"

            android:textColor="#fff"
            android:theme="@style/MyButton" />

    </LinearLayout>

</LinearLayout>
