<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.aristoteles.Resultados">

    <TextView
        android:id="@+id/grade"
        android:layout_width="329dp"
        android:layout_height="68dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_below="@+id/grade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:padding="16dp"
        android:textColor="#000"
        android:layout_margin="16dp"
        android:fontFamily="casual"
        android:id="@+id/outOf"
        android:text="Você acertou 8 de 9"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/outOf"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.054"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button
            android:id="@+id/fecharResultado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/sairResultado"

            android:textColor="#fff"
            android:theme="@style/ButtonPerguntas" />

        <Button
            android:id="@+id/retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/refazer"

            android:textColor="#fff"
            android:theme="@style/MyButton" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="108dp"
        app:srcCompat="@drawable/quizfeito"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/grade"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


</android.support.constraint.ConstraintLayout>
